--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
   <header class="page-header">
     <nav class="page-menu">
       <a class="logo">
-        <img src="img/logo.png" alt="Логотип сайта Sedona">
+        <img src="img/logo.svg" alt="Логотип сайта Sedona">
       </a>
       <ul class="site-navigation">
         <li class="header-item"><a href="#">Информация</a></li>
@@ -103,15 +103,15 @@
           </ul>
         </div>
         <ul class="list-sorting-arrows">
-          <li><a href="#" class="sort-up"><img class="sort-img" src="img/icon-up.png" alt="Стрелка вверх"></a></li>
-          <li><a href="#" class="sort-down"><img class="sort-img" src="img/icon-down.png" alt="Стрелка вниз"></a></li>
+          <li><a href="#" class="sort-up"><img class="sort-img" src="img/icon-up.svg" alt="Стрелка вверх"></a></li>
+          <li><a href="#" class="sort-down"><img class="sort-img" src="img/icon-down.svg" alt="Стрелка вниз"></a></li>
         </ul>
       </div>
       <h2 class="visually-hidden">Выбор гостиницы</h2>
       <ul class="hotel-list">
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img class="hotel-photo-item" src="img/amara.png" alt="Фотография гостиницы">
+            <img class="hotel-photo-item" src="img/amara.jpg" alt="Фотография гостиницы">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Amara resort & spa</h2>
@@ -126,17 +126,14 @@
           </div>
           <div class="hotel-rating">
             <span class="stars-amara">
-              <img class="star-item" src="/img/star.svg" alt="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
+              <p class="stars-amara"></p>
             </span>
             <p class="rating-value">Рейтинг: 8,5</p>
           </div>
         </li>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img class="hotel-photo-item" src="img/desert.png" alt="фотография гостиницы">
+            <img class="hotel-photo-item" src="img/desert.jpg" alt="фотография гостиницы">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Desert quail inn</h2>
@@ -151,9 +148,7 @@
           </div>
           <div class="hotel-rating">
             <span class="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
+              <p class="stars-desert"></p>
             </span>
             <p class="rating-value">Рейтинг: 8,9</p>
           </div>
@@ -175,8 +170,7 @@
           </div>
           <div class="hotel-rating">
             <span class="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
-              <img class="star-item" src="/img/star.svg" alt="stars">
+              <p class="stars-villas"></p>
             </span>
             <p class="rating-value">Рейтинг: 9,2</p>
           </div>
