--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="page-header">
     <nav class="page-menu">
       <a class="logo">
-        <img src="img/logo.png" alt="Логотип сайта Sedona">
+        <img src="img/logo.svg" alt="Логотип сайта Sedona">
       </a>
       <ul class="site-navigation">
         <li class="header-item"><a href="#">Информация</a></li>
